Fix custom icons not showing up properly
Individual POIs such as player POIs can have their own icon per
POI, so we should respect that.

--- a/overviewer_core/data/web_assets/overviewer.css
+++ b/overviewer_core/data/web_assets/overviewer.css
@@ -173,3 +173,9 @@ div.worldcontrol select {
     padding: 0 5px;
     color: #333;
 }
+
+.custom-icon {
+    position:relative;
+    left:-50%;
+    top:-50%;
+}
